--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,17 @@ body {
   padding: 0;
   margin: 0;
 }
-/* end common css */
-
-.wrap.blue {
-  background: #73c7d1;
-}
 .container {
   width: 960px;
   margin: 0 auto;
 }
+/* end common css */
+
+
+.sky-content {
+  background: #73c7d1;
+}
+
 .banner {
   background: #fff;
 }
@@ -35,25 +37,25 @@ body {
   min-height: 415px;
   background: url(../images/top-banner-kid.jpg) no-repeat;
 }
-.tags {
-}
-ul {
+
+ul.nav {
   margin: 0;
   padding: 0;
   list-style-type: none;
   margin-top: -67px;
 }
-ul li {
+ul.nav li {
   float: left;
 }
-.current-page {
-  border-bottom: 0 !important;
-}
-img {
+
+ul.nav li img {
   height: 72px;
   width: 240px;
   display: block;
 }
+
+
+
 .content {
   min-height: 550px;
 }
